--- a/index.html
+++ b/index.html
@@ -1,23 +1,51 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>My CV</title>
-		<link rel="stylesheet" href="style.css">
-	</head>
+<head>
+    <title>My CV</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+</head>
 
-	<body>
-		<h1>Alejandro Barquero</h1>
-		<h3>Email: 1abg@proton.me, Phone: +353899465046</h3>
-		<h2>Education</h2>
-			<p>PearsonVue certified Software Developer.</p>
-		<h2>Experience</h2>
-			<p>Technical Support Engineer at Saleforce.</p>
-		<h2>Skills</h2>
-		<ul>
-			<li>     Good at Lingo dancing.</li>
-			<li>        Karaoke black-belt.</li>
-			<li>Excellent carbonara recipe.</li>
-		</ul>
-		<a href="https://www.linkedin.com/in/alex-b-a00361253/"> Like and Subscribe for more content</a>
-	</body>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1>Alejandro Barquero</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3>Email: 1abg@proton.me, Phone: +353899465046</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h2>Education</h2>
+                <p>PearsonVue certified Software Developer.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h2>Experience</h2>
+                <p>Technical Support Engineer at Saleforce.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h2>Skills</h2>
+                <ul>
+                    <li>Good at Lingo dancing.</li>
+                    <li>Karaoke black-belt.</li>
+                    <li>Excellent carbonara recipe.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <a href="https://www.linkedin.com/in/alex-b-a00361253/">Like and Subscribe for more content</a>
+            </div>
+        </div>
+    </div>
+    <!-- https://getbootstrap.com/docs/5.3/layout/grid/ -->
+</body>
 </html>
